--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -7,19 +7,19 @@
     tools:context=".AddNoteActivity">
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="670dp"
         android:hint="Type Note"
         android:id="@+id/add_new_note_edit_text"/>
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content" background="@color/colorPrimary">
+
         <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/bottomSpinner"
-            android:spinnerMode="dropdown"/>
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:spinnerMode="dropdown" />
     </androidx.appcompat.widget.Toolbar>
 
 </LinearLayout>
